--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,12 +20,13 @@ services:
             - web
         links:
             - web:web
+            - static:static
     
     static:
         restart: always
         build: ./static
-        ports:
-            - "8080:8000"
+        expose:
+            - "8000"
 
 volumes:
   db-data:
